crates/aihu-css-core/tests/snapshots/light_scope_snapshot__renaming_a_short_keyframe_does_not_corrupt_a_longer_one_sharing_its_prefix.snap
---
source: crates/aihu-css-core/tests/light_scope_snapshot.rs
assertion_line: 120
expression: "compile_sfc_scoped(&light(\"@keyframes fade { from { opacity: 0.5; } to { opacity: 1; } } \\\n         @keyframes fade-in { from { opacity: 0; } to { opacity: 1; } } \\\n         .a { animation-name: fade; } .b { animation-name: fade-in; }\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
/* authored @style (scoped) */
@keyframes fade-a1b2c3d4 {
  from {
    opacity: 0.5;
  }
  to {
    opacity: 1;
  }
}
@keyframes fade-in-a1b2c3d4 {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@scope ([data-a="a1b2c3d4"]) to ([data-a]) {
.a {
  animation-name: fade-a1b2c3d4;
}
.b {
  animation-name: fade-in-a1b2c3d4;
}
}
