crates/aihu-css-core/tests/snapshots/light_scope_snapshot__slotted_tag_compounds_with_the_marker_attribute.snap
---
source: crates/aihu-css-core/tests/light_scope_snapshot.rs
assertion_line: 61
expression: "compile_sfc_scoped(&light(\"::slotted(p) { margin: 0; }\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
/* authored @style (scoped) */
@scope ([data-a="a1b2c3d4"]) to ([data-a]) {
:is(p)[data-aihu-slotted] {
  margin: 0;
}
}
