crates/aihu-css-core/tests/snapshots/light_scope_snapshot__slotted_wildcard_lowers_to_the_marker_attribute.snap
---
source: crates/aihu-css-core/tests/light_scope_snapshot.rs
assertion_line: 54
expression: "compile_sfc_scoped(&light(\"::slotted(*) { margin: 0; }\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
/* authored @style (scoped) */
@scope ([data-a="a1b2c3d4"]) to ([data-a]) {
[data-aihu-slotted] {
  margin: 0;
}
}
