crates/aihu-css-core/tests/snapshots/light_scope_snapshot__slotted_with_comma_list_arg_stays_one_selector_list_not_two.snap
---
source: crates/aihu-css-core/tests/light_scope_snapshot.rs
assertion_line: 165
expression: "compile_sfc_scoped(&light(\"::slotted(p, span) { margin: 0; }\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
/* authored @style (scoped) */
@scope ([data-a="a1b2c3d4"]) to ([data-a]) {
:is(p, span)[data-aihu-slotted] {
  margin: 0;
}
}
